test/expected/explain_sic8.out
explain signed char8_t x
        ^
9: error: "signed char8_t" is illegal for built-in type
